# Napal

./: Cargo.toml  README.md
config/: DefaultMetrics.txt  DefaultPlotLineColors.txt  DefaultPlotSettings.txt  ExampleMetrics.txt  Metrics.txt  PlotSettings2.txt
src/: csv_extracter.rs  data_loader.rs  html_renderer.rs  main.rs  parameters.rs  plotter.rs  statistics.rs
templates/: template.hbs
