[package]
name = "napal"
version = "0.2.0"
authors = ["Válter Santos <valter.c.santos@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
csv = "1.1.3"
plotters = "0.2"
chrono = "0.4"
log = "0.4.0"
env_logger = "0.8.3"
statrs = "0.12.0"
rayon = "1.3.0"
handlebars = "3.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }